--- a/vite-project/styles/resume.css
+++ b/vite-project/styles/resume.css
@@ -17,55 +17,47 @@ body,
     --font-family: "Montserrat", sans-serif;
   }
 
-.navbar{
-  display: flex;
-  position: relative;
-  justify-content: space-between;
-  align-items: center;
-  color: white;
-  z-index: 1;
-  font-size: 1.25rem;
-  background: lightblue;
-}
-.nav-links{
+  .navbar{
     display: flex;
-    margin-right: 3rem;
-    list-style: none;
-}
-.logo{
-  display: flex;
-  flex-direction: row;
-  color: white;
-  letter-spacing: 5px;
-  font-size: 5rem;
-  padding-left: 5rem;
-  font-family: 'Ma Shan Zheng', cursive;
-}
-.logo h4{
-  padding-top: 0.7rem;
-}
-.logo img{
-  height: 5rem;
-  width: 5rem;
-  margin-right: 2rem;
-}
-ul li {
-    padding: 25px 25px;
-  } 
-.navbar a{
-  display: block;
-  font-family: var(--font-family);
-  font-style: normal;
-  font-weight: 400;
-  font-size: 2rem;
-  line-height: 2rem;
-  color: #ffffff;
-  text-decoration: none;
-}
-.links:hover {
-  color: #f25e5e;
-  font-weight: bold;
-}
+    position: relative;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+    z-index: 1;
+    font-size: 1.25rem;
+    background: lightblue;
+  }
+  .nav-links{
+      display: flex;
+      margin-right: 3rem;
+      list-style: none;
+  }
+  .logo{
+    display: flex;
+    flex-direction: row;
+    color: white;
+    letter-spacing: 5px;
+    font-size: 5rem;
+    padding-left: 5rem;
+    font-family: 'Roboto Slab', serif;
+  }
+  ul li {
+      padding: 25px 25px;
+    } 
+  .navbar a{
+    display: block;
+    font-family: 'Open Sans', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 2rem;
+    line-height: 2rem;
+    color: #ffffff;
+    text-decoration: none;
+  }
+  .links:hover {
+    color: black;
+    font-weight: bold;
+  }
 
 /*Heading*/
 .heading{
@@ -76,6 +68,7 @@ ul li {
 }
 .title{
  font-size: var(--h2);
+ font-family: 'Montserrat', sans-serif;
 }
 .education{
 width: 80%;
@@ -85,6 +78,7 @@ padding-top: 10rem;
 }
 .title-education{
 font-size: var(--h3);
+font-family: 'Montserrat', sans-serif;
 }
 
 /*Education*/
@@ -97,6 +91,7 @@ font-size: var(--h3);
 .texts{
     flex-basis: 55%;
     font-size: var(--h2);
+    font-family: 'Kdam Thmor Pro', sans-serif;
 }
 .texts p{
     font-size: 3rem;
@@ -123,6 +118,7 @@ font-size: var(--h3);
 
 .title-experience{
     font-size: var(--h3);
+    font-family: 'Montserrat', sans-serif;
 }
 .organization{
     margin-top: 5%;
@@ -142,19 +138,24 @@ font-size: var(--h3);
        width: 30rem;
    }
   
-   /*Footer*/
+/*Footer*/
 .footer {
-    width: 100%;
-    text-align: center;
-    padding: 1.875rem 0;
-  }
-  .icons .fa {
-    color: black;
-    margin: 0 0.813rem;
-    cursor: pointer;
-    padding: 1.125rem 0;
-    font-size: 3rem;
-  }
-  .footer h5{
-    font-size: var(--h5);
-  }
+  width: 100%;
+  text-align: center;
+  padding: 1.875rem 0;
+}
+.icons .fa {
+  color: black;
+  margin: 0 0.813rem;
+  cursor: pointer;
+  padding: 1.125rem 0;
+  font-size: 3rem;
+}
+.footer h5{
+  font-size: var(--h5);
+  font-family: 'Roboto Slab', serif;
+}
+.footer h3{
+  font-size: var(--h3);
+  font-family: 'Roboto Slab', serif;
+}
