--- a/vite-project/styles/style.css
+++ b/vite-project/styles/style.css
@@ -13,7 +13,6 @@ body,
   --h3: 3.375rem;
   --h4: 2.25rem;
   --h5: 1.5rem;
-  --font-family: "Montserrat", sans-serif;
 }
 
 .navbar{
@@ -38,41 +37,35 @@ body,
   letter-spacing: 5px;
   font-size: 5rem;
   padding-left: 5rem;
-  font-family: 'Ma Shan Zheng', cursive;
-}
-.logo h4{
-  padding-top: 0.7rem;
-}
-.logo img{
-  height: 5rem;
-  width: 5rem;
-  margin-right: 2rem;
+  font-family: 'Roboto Slab', serif;
 }
 ul li {
     padding: 25px 25px;
   } 
 .navbar a{
   display: block;
-  font-family: var(--font-family);
+  font-family: 'Open Sans', sans-serif;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 700;
   font-size: 2rem;
   line-height: 2rem;
   color: #ffffff;
   text-decoration: none;
 }
 .links:hover {
-  color: #f25e5e;
+  color: black;
   font-weight: bold;
 }
 /*Intro*/
 .title-intro{
   margin-bottom: .25em;
   font-size: var(--h1);
+  font-family: 'Montserrat', sans-serif;
 }
 .title-subtitle{
   font-size: var(--h2);
   margin-bottom: 1em;
+  font-family: 'Montserrat', sans-serif;
 }
 .intro{
   width: 80%;
@@ -86,7 +79,7 @@ ul li {
   justify-content: space-between;
 }
 .image img{
-  width: 15.625rem;
+  width: 30rem;
   margin-right: 15rem; 
 }
 .texts{
@@ -107,13 +100,15 @@ ul li {
   border: 3px solid #000000;
   border-right-style: none;
   border-left-style: none;
-  margin-bottom: 3rem;
+  margin-bottom: 20rem;
 }
 .description h1{
   font-size: var(--h2);
+  font-family: 'Montserrat', sans-serif;
 }
 .description p{
   font-size: var(--h3);
+  font-family: 'Montserrat', sans-serif;
 }
 
 /*Footer*/
@@ -131,4 +126,9 @@ ul li {
 }
 .footer h5{
   font-size: var(--h5);
+  font-family: 'Roboto Slab', serif;
+}
+.footer h3{
+  font-size: var(--h3);
+  font-family: 'Roboto Slab', serif;
 }
