--- a/vite-project/styles/resume.css
+++ b/vite-project/styles/resume.css
@@ -158,19 +158,25 @@ ul li {
   flex-wrap: wrap;
 }
 .skill {
+  display: flex;
+  justify-content: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  width: 5rem;
   text-align: center;
-  width: 10rem;
 }
 .skill p {
-  font-size: var(--h2);
+  font-size: var(--h5);
   font-family: "Roboto Slab", serif;
 }
 
 .skills img {
-  width: 25rem;
-  height: 25rem;
+  width: 15rem;
+  height: 15rem;
   object-fit: cover;
+  margin-bottom: 3rem;
 }
+
 
 /*Footer*/
 .footer {
